Overflow fix and iOS shadow + bold fix.

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
  	font-family: 'Montserrat';
  }
 
+html {
+ 	overflow-y: scroll;
+ 	overflow-x: hidden;
+}
+
  body {
  	overflow-x: hidden;
  }
@@ -95,7 +100,7 @@
  }
 
  h1.header {
- 	font-weight: bold;
+ 	font-size: 4.5em;
  	letter-spacing: -3px;
  	text-shadow: 0px 2px 6px #303934;
  	margin-bottom: 0;
